[project]
name = "hello-agent"
version = "2025.11.0"
description = "LLM agent playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "google-search-results>=2.4.2",
  "httpx[socks]>=0.28.1",
  "litellm>=1.79.3",
  "openai>=2.7.2",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ulib"]

[tool.pyrefly]
project-includes = [
  "**/*.py",
  "**/*.ipynb",
]

[tool.uv]
python-preference = "managed"
prerelease = "allow"
